# Izorate

./: Features.md  README.md  izorate.db  package.json  pnpm-lock.yaml
.antigravity/: Design.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: .taurignore  Cargo.toml  izorate.db  tauri.conf.json
src-tauri/data/: izorate.db
src-tauri/data/graphs/: graphs.db
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  crypto.rs  db.rs  graph_db.rs  lib.rs  main.rs  network_tools.rs  ssh.rs  vault.rs
src/components/: AIPage.tsx  AIPanel.tsx  FileManagerPane.tsx  GraphModal.tsx  KeysPane.tsx  NewConnectionModal.tsx  PasswordPromptModal.tsx  S3Manager.tsx  SessionSidebar.tsx  SettingsPane.tsx  StatusBar.tsx  TabBar.tsx  TerminalPane.tsx  ToolsPane.tsx  TopBar.tsx  TracerouteGraph.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  SanitizationModal.tsx
src/data/: mockData.ts
src/services/: ai.ts
src/types/: ai.ts  session.ts
