[package]
name = "izorate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "izorate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
russh = "0.58.0"
russh-keys = "0.49.2"
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["full"] }
russh-sftp = "2.1.1"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-clipboard-manager = "2.3.2"
netstat2 = "0.11"
socket2 = { version = "0.5", features = ["all"] }
dns-lookup = "2"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
machineid-rs = "1.2.4"
base64 = "0.22.1"
zeroize = { version = "1.8.1", features = ["derive"] }
sha2 = "0.10.8"


